<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.solent.examples.com600.mcride</groupId>
    <artifactId>MotorCycleRidePlanner</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <slf4j.version>1.7.12</slf4j.version>
        <log4j.version>2.11.1</log4j.version>
        <junit.version>4.12</junit.version>
        <hamcrest-core.version>1.3</hamcrest-core.version>
        <!-- class path loading problems with this version -->
        <!--        <jetty.version>9.0.5.v20130815</jetty.version>-->
        
        <!-- spammed with warnings for class path in this one -->
        <!-- see https://stackoverflow.com/questions/52402360/maven-jetty-spams-warning-scanned-from-multiple-locations -->
        <!--<jetty.version>9.4.9.v20180320</jetty.version>-->
        <!-- this version works without warnings but takes a while to come up -->
        <jetty.version>9.3.9.v20160517</jetty.version>

        <jersey.version>2.17</jersey.version>
        <maven.surefire.plugin.version>2.18</maven.surefire.plugin.version>

        <!-- dependencies for java 11 -->
        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
        <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
        <jaxb-runtime.version>2.4.0-b180830.0438</jaxb-runtime.version>
        <!-- needed by Hibernate for java 11 -->
        <javassist.version>3.27.0-GA</javassist.version>
        <cglib-nodep.version>3.2.12</cglib-nodep.version>
    </properties>
    
    <dependencyManagement>
   
        <dependencies>

            <!-- Jersey jetty dependencies -->
            <dependency>
                <groupId>org.glassfish.jersey.core</groupId>
                <artifactId>jersey-server</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.containers</groupId>
                <artifactId>jersey-container-jetty-http</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.containers</groupId>
                <artifactId>jersey-container-servlet-core</artifactId>
                <version>${jersey.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jersey.media</groupId>
                <artifactId>jersey-media-json-jackson</artifactId>
                <version>${jersey.version}</version>
            </dependency>


            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>


            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <!-- dependencies for java 11 -->
            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax.annotation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${jaxb-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb-runtime.version}</version>
            </dependency>
            <!-- needed by Hibernate for java 11 -->
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>${javassist.version}</version>
            </dependency>
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib-nodep</artifactId>
                <version>${cglib-nodep.version}</version>
            </dependency>

         
            <!-- test -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>${hamcrest-core.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <modules>
        <module>model</module>
        <module>dao-jaxb</module>
        <module>dao-jpa</module>
        <module>service</module>
        <module>web</module>
        <module>rest-client</module>
    </modules>
</project>